<resources>
    <string name="app_name">Asis</string>
    <string name="Log_In">&#160;&#160;&#160;&#160;&#160;&#160;Login</string>
    <string name="Did_you_Forget_the_Password">Forget Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">&#160;Password</string>
    <string name="E_mail">&#160;E-mail</string>

    <!-- Main screen strings-->
    <string name="home_button">Home</string>
    <string name="favorites_button">Favorites</string>
    <string name="menu_button">Menu</string>
    <string name="location_button">Location</string>
    <string name="string_button">Button</string>
    <string name="search_button"><font size="16">&#160;Search</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="settings_button">Settings</string>
    <string name="log_out_button">Log out</string>
    <string name="log_in_button">Login</string>
    <string name="sign_in_button">Sign in</string>
    <string name="share_the_app_button">Share the App</string>
    <string name="change_the_language_button">Change the Language</string>
    <string name="about_us_button">About Us</string>
    <string name="rate_us_button">Rate Us</string>
    <string name="buses_button">Buses</string>
    <string name="string_nfc">Nfc</string>
    <string name="stations_button">Stations</string>
    <string name="welcome_string">Welcome!</string>
    <string name="Profile">profile_text</string>
    <string name="profile_viewtext">Profile</string>
    <string name="system_text">System</string>
    <string name="application_text">Application</string>
    <string name="stops_button">Stops</string>
    <string name="menu_string">\nMenu</string>
    <string name="title_activity_stop">Stop</string>
    <string name="title_activity_stops_map">StopsMapActivity</string>
    <string name="title_activity_delete">DeleteActivity</string>
    <string name="bus_location_button">Bus\nLocations</string>
    <string name="lines_text">Lines</string>
    <string name="services_button">Services</string>
    <string name="title_activity_service">ServiceActivity</string>

    <string-array name="Languages">
        <item>English</item>
        <item>Turkish</item>
    </string-array>
    <string name="title_activity_lines_to_map">LinesToMap</string>
    <string name="card_button">My Card</string>
    <string name="card_text"><font size="16">Card Id</font></string>
    <string name="Show_the_Balance">Show the Balance</string>
    <string name="string_back">Back</string>
    <string name="query_with_nfc">NFC</string>
    <string name="card_ıd"><font size="16">CARD ID</font></string>
    <string name="card_reader">Card Reader</string>
    <string name="show_the_card_info">Show the Card Info</string>


</resources>

