<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"



    >
        <item
            android:id="@+id/home"
            android:icon="@drawable/vector_home"
            android:title="@string/home_button" />

        <item
            android:id="@+id/favorites"
            android:checkable="false"
            android:checked="false"
            android:enabled="true"
            android:icon="@drawable/vector_favorites"
            android:title="@string/favorites_button"
            app:showAsAction="collapseActionView" />

        <item
            android:id="@+id/location"
            android:icon="@drawable/vector_location"
            android:title="@string/location_button" />

        <item
            android:id="@+id/menu"
            android:icon="@drawable/vector_menu"
            android:title="@string/menu_button" />

</menu>