<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:backgroundTint="#F8F3F3"
    tools:context=".view.MainActivity">


    <EditText
        android:id="@+id/editTextAccountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view_background"
        android:backgroundTint="#FFFFFF"
        android:drawableLeft="@drawable/account_name_icon"
        android:ems="10"
        android:hint="@string/E_mail"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        android:layout_marginTop="40dp"
        android:textColor="#000000"
        android:textColorHint="#4A4747"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/login_vector_asset"
        tools:layout_editor_absoluteY="267dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/text_view_background"
        android:backgroundTint="#FFFFFF"
        android:drawableLeft="@drawable/password_icon"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#4A4747"


        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextAccountName"
        app:layout_constraintStart_toStartOf="@+id/editTextAccountName"
        app:layout_constraintTop_toBottomOf="@+id/editTextAccountName" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="209dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:alpha="08"
        android:background="@drawable/text_view_background"
        android:drawableRight="@drawable/ic_baseline_login_24"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#000000"
        android:text="@string/Log_In"
        android:textAllCaps="false"
        android:textColor="#000000"

        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"


        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:shadowColor="#2196F3"
        android:text="@string/Did_you_Forget_the_Password"
        android:textColor="#2196F3"
        app:layout_constraintEnd_toEndOf="@+id/logInButton"

        app:layout_constraintStart_toStartOf="@+id/logInButton"
        app:layout_constraintTop_toBottomOf="@+id/logInButton" />

    <TextView
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Sign_Up"
        android:textAllCaps="false"
        android:textColor="#2196F3"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordText"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordText" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="141dp"
        android:layout_height="138dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextAccountName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562"
        app:srcCompat="@drawable/asis_jpeg" />

</androidx.constraintlayout.widget.ConstraintLayout>