<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MenuFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e0e0e0"
            android:text="@string/menu_string"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!--<TextView
            android:id="@+id/textView4"
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:layout_marginLeft="15dp"
            android:background="@color/line_color"
            android:gravity="center" />-->

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:alpha="0.7"
            android:text="@string/profile_viewtext"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <!--<com.google.android.material.button.MaterialButton
            android:id="@+id/settingsButton"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="1"
            android:stateListAnimator="@null"

            android:background="@drawable/text_view_background"
            android:cursorVisible="false"
            android:drawableLeft="@drawable/vector_settings"
            android:elevation="10dp"
            android:insetLeft="15dp"
            android:insetTop="2dp"
            android:insetBottom="2dp"
            android:text="@string/settings_button"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/changeTheLanguageButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:fontFamily="sans-serif"

            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="1"
            android:background="@color/white"
            android:drawableLeft="@drawable/vector_change_the_language"
            android:insetLeft="15dp"
            android:insetTop="2dp"
            android:insetBottom="2dp"
            android:text="@string/change_the_language_button"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:iconPadding="14dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:alpha="0.3"
            android:background="@color/line_color"
            android:gravity="center" />

       <!-- <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:alpha="0.7"
            android:text="@string/application_text"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/aboutUsButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="1"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/vector_about_us"
            android:elevation="0dp"
            android:insetLeft="15dp"
            android:insetTop="2dp"
            android:fontFamily="sans-serif"

            android:insetBottom="2dp"
            android:shadowColor="#A61919"
            android:text="@string/about_us_button"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:iconPadding="14dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shareTheAppButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"

            android:layout_marginTop="10dp"
            android:alpha="1"

            android:background="@color/white"
            android:drawableLeft="@drawable/vector_share_the_app"
            android:insetLeft="15dp"
            android:insetTop="2dp"
            android:insetBottom="2dp"
            android:shadowColor="#A61919"
            android:text="@string/share_the_app_button"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"

            app:iconPadding="14dp" />

        <!--<com.google.android.material.button.MaterialButton
            android:id="@+id/rateUsButton"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="1"
            android:background="@color/white"
            android:drawableLeft="@drawable/vector_rate_us"
            android:insetLeft="15dp"
            android:insetTop="2dp"
            android:insetBottom="2dp"
            android:shadowColor="#A61919"
            android:text="@string/rate_us_button"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />
-->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:alpha="0.3"
            android:background="@color/line_color"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:alpha="0.7"
            android:text="@string/system_text"
            android:textColor="@color/black"
            android:textSize="18sp" />

       <!-- <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/logInButton"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:background="@color/white"
            android:drawableLeft="@drawable/vector_login"
            android:insetLeft="15dp"
            android:insetTop="2dp"
            android:insetBottom="2dp"
            android:shadowColor="#A61919"
            android:text="@string/log_in_button"
            android:visibility="gone"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" /> -->

        <Button
            android:id="@+id/logOutButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="1"
            android:background="@color/white"
            android:drawableLeft="@drawable/vector_logout"
            android:insetLeft="15dp"
            android:insetTop="2dp"
            android:insetBottom="2dp"
            android:fontFamily="sans-serif"

            android:shadowColor="#A61919"
            android:text="@string/log_out_button"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:iconPadding="14dp" />
        <TextView
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:alpha="0.3"
            android:background="@color/line_color"
            android:gravity="center" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>